# bracketeer

./: .env  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
api/: __main__.py  database.py  migrate.py  plugin.py  utils.py
api/auth/: access.py  crud.py  dependencies.py  encrypt.py  models.py  plugin.py  router.py  schemas.py  user.py
api/suspension/: crud.py  models.py  plugin.py  router.py  schemas.py
tests/auth/: test_encrypt.py
