[project]
name = "bracketeer"
version = "0.1.0"
description = "Mountain Bike suspension bracketing toolkit."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi[standard]>=0.116.1",
    "passlib[bcrypt]>=1.7.4",
    "pre-commit>=4.2.0",
    "ruff>=0.12.5",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.35.0",
]
